--- a/app/views/fireteam/gear.html
+++ b/app/views/fireteam/gear.html
@@ -1,6 +1,6 @@
 <div class="gear">
   <div class="gear__stats row">
-    <div class="gear__stat col-xs-4" data-content="{{'Intellect: ' + player.int + ' (' + player.intPercent + '%)'}}" bs-popover>
+    <div class="gear__stat col-xs-4" bs-popover="{content:'Intellect: ' + player.int + ' (' + player.intPercent + '%)'}">
       <div class="gear-stat__label">
         Intellect
       </div>
@@ -12,7 +12,7 @@
         </progress>
       </div>
     </div>
-    <div class="gear__stat col-xs-4" data-content="{{'Discipline: ' + player.dis + ' (' + player.disPercent + '%)'}}" bs-popover>
+    <div class="gear__stat col-xs-4" bs-popover="{content:'Discipline: ' + player.dis + ' (' + player.disPercent + '%)'}">
       <div class="gear-stat__label">
         Discipline
       </div>
@@ -24,7 +24,7 @@
         </progress>
       </div>
     </div>
-    <div class="gear__stat col-xs-4" data-content="{{'Strength: ' + player.str + ' (' + player.strPercent + '%)'}}" bs-popover>
+    <div class="gear__stat col-xs-4" bs-popover="{content:'Strength: ' + player.str + ' (' + player.strPercent + '%)'}">
       <div class="gear-stat__label">
         Strength
       </div>
@@ -39,7 +39,7 @@
   </div>
   <div class="gear__perks row">
     <div class="gear-perk col-xs-6" ng-repeat="classNode in player.classNodes track by $index"
-         data-content="{{classNode.description}}" bs-popover>
+         bs-popover="{content:classNode.description}">
       <img class="gear-perk__icon img-responsive" ng-src="{{classNode.icon}}">
       <span class="gear-perk__title" ng-bind="classNode.name"></span>
     </div>
