--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -96,8 +96,7 @@
   <div class="last-match__medals">
     <div class="row">
       <div class="col-xs-2" ng-repeat="medal in player.medals track by $index"
-           data-title="{{DestinyMedalDefinition[medal.id].statName}}"
-           data-content="{{DestinyMedalDefinition[medal.id].statDescription}}" bs-popover>
+           bs-popover="{title:DestinyMedalDefinition[medal.id].statName,content:DestinyMedalDefinition[medal.id].statDescription}">
         <img class="img-responsive" ng-src="{{'https://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage}}">
       </div>
     </div>
