--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -10,14 +10,39 @@
 }
 
 .player__edit {
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.6);
   color: white;
   transition: opacity ease .2s;
   cursor: pointer;
   position: absolute;
-  top: 1.5em;
-  right: 2em;
-  width: 4em;
+  margin-top: 1em;
+  margin-left: 1em;
+  left: 0;
+  top: 0;
+  height: 3em;
+  width: 3em;
   text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+  opacity: 0;
+  animation: hint 4s;
+
+  .player__info:hover & {
+    opacity: 1;
+  }
+
+  i {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+  }
+}
+
+@keyframes hint {
+    0% {opacity: 1;}
+    50% {opacity: 1;}
+    100% {opacity: 0;}
 }
 
 .player__intro {
@@ -55,13 +80,13 @@
 .player__kd {
   font-weight: normal;
   float: right;
-  color: darken($player-card, 15%);
+  color: darken($player-card, 10%);
   text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
   text-align: right;
   top: 50%;
   position: absolute;
   right: 1em;
-  transform: translateY(-40%);
+  transform: translateY(-43%);
 
   span {
     font-size: 1.3em;
@@ -97,7 +122,20 @@
 
 .player__race {
   font-size: .9em;
-  text-shadow: 0px 2px 3px rgba(0,0,0,0.5);
+  text-shadow: 0px 1px 2px rgba(0,0,0,0.3);
+}
+
+.player__level {
+  font-size: .9em;
+  margin: 0 .5em 0 .3em;
+}
+
+.player__grimoire {
+  font-size: .9em;
+  img {
+    height: 1em;
+    margin-right: .3em;
+  }
 }
 
 .player__summary {
