--- a/app/styles/elements/_gear.scss
+++ b/app/styles/elements/_gear.scss
@@ -56,21 +56,25 @@
 .gear-perk {
   white-space: nowrap;
   margin: .25em 0;
+  display: flex;
 }
 
 .gear-perk__icon {
   width: 1.5em;
+  height: 1.5em;
   background: $perk-background;
-  display: inline-block;
-  margin-right: .3em;
+  margin-right: .5em;
   border-radius: 5px;
   padding: 3px;
 }
 
 .gear-perk__title {
-  white-space: nowrap;
+  align-self: center;
   font-family: 'Roboto Condensed';
-  font-size: .8em;
+  font-weight: normal;
+  font-size: .9em;
   line-height: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
   color: $perk-background;
 }
