--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -71,7 +71,7 @@
         </div>-->
         <div class="recent-players" ng-show="$index >= 1">
           <div class="edit-player-action__header">
-            <span ng-bind="fireteam[0].name"></span>'s recent teammates
+            <span ng-bind="fireteam[0].name + '\'s recent teammates'"></span>
           </div>
           <div class="recent-player" ng-repeat="player in recentPlayers track by $index">
             <a class="btn btn-white btn-raised" ng-bind="player.name" ng-click="setRecentPlayer(player, ($parent.$index))"
