--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -14,6 +14,10 @@
   max-width: 1080px;
 }
 
+.slick-slide img {
+  display: inline;
+}
+
 @media all and (max-width: 992px) {
   .content {
     padding-top: 30px;
