--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -19,7 +19,7 @@
           </span>
         </div>
       </div>
-      <span class="player__edit shadow-z-1" ng-if="!subdomain" ng-click="toggleEdit(player)">
+      <span class="player__edit shadow-z-1" ng-if="!subdomain && !$first" ng-click="toggleEdit(player)">
         <i class="material-icons">&#xE254;</i>
       </span>
     </div>
