--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <img src="/images/ToO_BurningShrine_Heatmap.jpg" class="img-responsive" alt="Heatmap" />
   </div>
 </div>
-<div class="wrapper">
+<div class="wrapper" ng-class="{'my-dtr': subdomain}">
   <header>
     <ng-include src="headerPartial"></ng-include>
   </header>
