--- a/app/styles/elements/_player-stats.scss
+++ b/app/styles/elements/_player-stats.scss
@@ -30,4 +30,8 @@
 .player-stats__bests {
   padding: 1em;
   border-top: 1px solid lighten($stats-background, 10%);
+
+  .stat-row__header {
+    margin-top: 0;
+  }
 }
