--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -10,6 +10,7 @@ $text-on-dark: #999;
 $weapons-background: #ECEFF1;
 $last-match-background: #E8F5E9;
 $stats-background: #E8EAF6;
+$maps-background: #E0F2F1;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
