--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -187,9 +187,8 @@
 .player__streak {
   display: inline-block;
   border-radius: 50%;
-  width: .5em;
-  height: .5em;
-  vertical-align: .1em;
+  width: 11px;
+  height: 11px;
   margin-left: .2em;
 }
 
@@ -260,7 +259,26 @@
   }
 
   &.player-history__match--loss {
-    background-color: $fail;
+    background-color: white;
+    position: relative;
+
+    &:after {
+      position: absolute;
+      font-family: 'Material Icons';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 15px;
+      line-height: 11px;
+      letter-spacing: normal;
+      text-transform: none;
+      word-wrap: normal;
+      -webkit-font-feature-settings: 'liga';
+      -webkit-font-smoothing: antialiased;
+      content: "\e14c";
+      color: $fail;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 }
 
@@ -296,7 +314,7 @@
   white-space: nowrap;
   overflow-x: auto;
   border-top: 1px solid #eee;
-  line-spacing: 0;
+  line-height: 1;
 }
 
 .player-hazard {
@@ -308,7 +326,6 @@
   border-radius: 3px;
   margin-right: 3px;
   line-height: 1.3;
-  line-spacing: 1;
   font-weight: normal;
 
   & + .player-hazard--none {
