--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -91,8 +91,8 @@
     <div class="player-hazard player-hazard--friendly"
          ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"
          bs-popover="{content:DestinyHazardDefinition[hazard]}">
-    </div>
-    <div class="player-hazard"
+    </div><!--
+    --><div class="player-hazard"
          ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index" ng-bind="hazard"
          bs-popover="{content:DestinyHazardDefinition[hazard]}">
     </div>
