I suck at angular :(

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,7 @@
 @import 'elements/stats';
 @import 'elements/edit-player';
 @import 'elements/maps';
+@import 'elements/modal';
 
 @media (min-width: 768px){
   ul[rn-carousel] > li:first-child {
