--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -13,7 +13,7 @@
     </div>
     <div class="collapse navbar-collapse" id="navbar">
       <ul class="nav navbar-nav">
-        <li><button type="button" class="btn btn-default navbar-btn" data-animation="am-fade-and-scale" data-placement="center" data-template-url="views/modal/map.html" bs-modal="modal">Map</button></li>
+        <li><button type="button" class="btn btn-default navbar-btn" bs-modal="mapModal">Map</button></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a type="button" class="btn btn-default" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a></li>
