--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -131,6 +131,10 @@
 .player__level {
   font-size: .9em;
   margin: 0 .5em 0 .3em;
+
+  span {
+    margin-right: .1em;
+  }
 }
 
 .player__grimoire {
