--- a/app/styles/elements/_last-match.scss
+++ b/app/styles/elements/_last-match.scss
@@ -20,8 +20,8 @@
 }
 
 .last-match__result {
-  height: 1em;
-  width: 1em;
+  height: 15px;
+  width: 15px;
   display: inline-block;
   border-radius: 50%;
   margin-right: 1em;
@@ -33,7 +33,27 @@
 }
 
 .last-match__result--loss {
-  background: $fail;
+  border: 1px solid $fail;
+  position: relative;
+
+  &:after {
+    position: absolute;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 11px;
+    line-height: 1em;
+    letter-spacing: normal;
+    text-transform: none;
+    word-wrap: normal;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+    content: "\e14c";
+    color: $fail;
+    top: .5px;
+    left: 1.5px;
+    text-align: center;
+  }
 }
 
 .last-match__details {
