--- a/app/styles/main/_layout.scss
+++ b/app/styles/main/_layout.scss
@@ -6,7 +6,7 @@
 }
 
 .content {
-  padding-top: 30px;
+  padding: 30px 0;
   flex: 1 1 auto;
 }
 
@@ -14,8 +14,8 @@
   max-width: 1080px;
 }
 
-@media all and (max-width: 992px) {
+@media all and (max-width: 1080px) {
   .content {
-    padding-top: 30px;
+    padding: 15px 0;
   }
 }
