--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,26 +1,34 @@
 <div class="footer shadow-z-1">
   <div class="container-fluid">
     <div class="row">
-      <div class="hidden-xs col-md-3">
-        <h5>© 2015 DestinyTrialsReport</h5>
-        <h5>DestinyTrialsReport@gmail.com</h5>
-        <h5><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
-      </div>
-      <div class="col-xs-12 col-md-7 text-center ad-sense">
-        <div ad-sense></div>
-      </div>
-      <div class="col-xs-6 hidden-lg hidden-md hidden-sm">
-        <h5>© 2015 DestinyTrialsReport</h5>
-        <h5>DestinyTrialsReport@gmail.com</h5>
-        <h5><a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">Fork me on GitHub</a></h5>
-      </div>
-      <div class="col-xs-6 col-md-2 text-right">
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-          <input type="hidden" name="cmd" value="_s-xclick">
-          <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
-          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
+      <div class="col-xs-12 footer__content">
+        <div class="footer__colofon">
+          <div class="footer__colofon__copyright">
+            © 2015 Destiny<span class="highlight">Trials</span>Report
+          </div>
+          <div class="footer__colofon__email">
+            <a href="mailto:destinytrialsreport@gmail.com" target="_blank">DestinyTrialsReport@gmail.com</a>
+          </div>
+          <div class="footer__colofon__contribute">
+            <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
+              Contribute on <img src="images/github.svg" />
+            </a>
+          </div>
+        </div>
+        <div class="footer__ad">
+          <div ad-sense></div>
+        </div>
+        <div class="footer__donate">
+          <div class="footer__donate__header">
+            Help us, become a <div class="player-hazard player-hazard--friendly">Site Donator</div>!
+          </div>
+          <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
       </div>
     </div>
   </div>
