More love for the footer

--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -44,7 +44,9 @@
   a {
     color: $text-on-dark;
 
-    &:hover {
+    &:hover,
+    &:active,
+    &:focus {
       text-decoration: none;
       color: white;
     }
