Removed map name from CSS and added it to js. Changed hover of email

--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -37,6 +37,17 @@
 
   a {
     color: $text-on-dark;
+
+    &:hover,
+    &:active,
+    &:focus {
+      text-decoration: none;
+      color: white;
+
+      svg .st0 {
+        fill: white;
+      }
+    }
   }
 }
 
