Separate color for donators, because they make us feel warm inside

--- a/app/styles/elements/_player.scss
+++ b/app/styles/elements/_player.scss
@@ -358,8 +358,12 @@
   }
 }
 
-.player-hazard--friendly {
+.player-hazard--developer {
   background: #2196F3;
+}
+
+.player-hazard--donator {
+  background: $success;
 }
 
 .player-hazard--none {
