--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -52,7 +52,7 @@
         </div>
         <div class="footer__donate">
           <div class="footer__donate__header">
-            Help us, become a <div class="player-hazard player-hazard--friendly">Site Donator</div>!
+            Help us, become a <div class="player-hazard player-hazard--donator">Site Donator</div>!
           </div>
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
             <input type="hidden" name="cmd" value="_s-xclick">
